Fix swatch-tally component tests when run in EE
Implement infrastructure to support database-dependent component tests
in both local and OpenShift ephemeral environments.

New components:
- DatabaseService: Generic PostgreSQL connection and transaction
  management using property-based configuration
- LocalDatabaseResourceConfig/LocalDatabaseManagedResource: Configure
  and manage local database containers with environment overrides
- OpenShiftDatabaseResourceConfig/OpenShiftDatabaseManagedResource:
  Configure and manage OpenShift databases with configurable secret keys
- SwatchDatabaseAnnotationBinding: @SwatchDatabase annotation support
  with environment-specific resource creation

Highlights:
  - Properties scoped per service instance (no prefixes needed)
  - Configurable secret key names for OpenShift (db.user, db.password, etc.)
  - Optional SSL mode support
  - Transaction-based query execution
  - Automatic environment detection and resource selection